# raylib_jam_256_unexpected

./: .gitignore  CMakeLists.txt  README.md  index.html  raylib_jam_256_unexpected.data  raylib_jam_256_unexpected.js  raylib_jam_256_unexpected.wasm  web.cmd
.github/workflows/: linux.yml  webassembly.yml  windows.yml
external projects/blender/: models_scene.blend  models_scene.blend1
external projects/photoshop/: brick.psd  brick_texture.psd  clay_tile.psd  clay_tile_16.psd  coins.psd  color_palette.psd  cube_brick_16.psd  cube_stick_16.psd  cube_straw_16.psd  cursor.psd  dirtbrown_tile.psd  dirtgray_tile.psd  grass2_tile.psd  grass3.psd  grass_tile_16.psd  iron.psd  lava_tile.psd  metallic_texture.psd  sell.psd  start_screen.psd  sticks_texture.psd  straw_texture.psd  thunderbolt.psd  weapon_strong_16.psd  weapon_weak.psd  wheat.psd  wheat_tile.psd  wheat_tile_16.psd  wood.psd  wood_tile.psd  wood_tile_16.psd
projects/VS2022/raylib_game/resources/: dirtgray_tile.gltf  grass_tile.gltf  red2.glb  red2.gltf  wolf.glb
resources/: brick_cube.gltf  clay_tile.gltf  grass2_tile.gltf  grass3_tile.gltf  lava_tile.gltf  red1.glb  red1.gltf  red3.glb  red3.gltf  red4.gltf  stick_cube.gltf  straw_cube.gltf  tile_selector.gltf  weapon_strong.gltf  weapon_weak.gltf  wheat_tile.gltf  wood_tile.gltf
src/: Makefile  building.c  building.h  bullet.c  bullet.h  camera.c  camera.h  enemy.c  enemy.h  game.c  game.h  game_state.c  game_state.h  main.c  raylib_game.c  sound.c  sound.h  terrain.c  terrain.h  uiManager.c  uiManager.h  utils.h
src/resources/: dirtbrown_tile.gltf  pig.glb  red4.glb
